2004-08-25  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 0.11.0

	* easdif/sdifframe.h, easdif/sdifframe.cpp 
	removed SetNbMatrix which was confusing because people used it
	to resize a Frame. Added a real resize function.
	Added size(), resize() and clear() functions to 
	have more consistent interface compared to stl containers.
	
2004-08-25  Axel Roebel  <roebel@localdomain>
Version 0.10.2

	* easdif/sdifentity.h, 
	Rewind(time) made public.
	
2004-07-29  Axel Roebel  <roebel@localdomain>
Version 0.10.1

	* easdif/sdifmatrixdata.h
	GetCol/SetCol functions used wrong increment,

	* easdif/sdifframe.cpp
	use eEmptySignature for Frame init.
	

2004-07-28  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 0.10.0

	* easdif/sdifmatrixdata.h, easdif/sdifmatrixdatainterface.h, easdif/sdifmatrix.h
	Added matrix accessing functions using unsigned char
	Added matrix set element/row/column  functions 
	

	
2004-07-26  Axel Roebel  <roebel@localdomain>
Version 0.9.1

	* Added configure support for pthreads.

2004-07-21  Axel Roebel  <roebel@localdomain>
Version 0.9.0

	* easdif/sdifentity.h, easdif/sdifentity.cpp, easdif/sdifframe.cpp, easdif/sdifframe.h
	Added frameDirectory and possibility to read frames
	from a given time position.

	* easdif/sdifmatrix.cpp, easdif/sdifmatrixdata.h, easdif/sdifmatrixdatainterface.h, easdif/sdifmatrix.h
	Added new data accessing functions to read complete columns 
	GetCol(double *,int icol), GetCol(float *,int icol), GetCol(int *,int icol)
	and rows 
	GetRow(double *,int irow), GetRow(float *,int irow), GetRow(int *,int irow)

	Unified interface to replace GetNbRow by GetNbRows
	and GetNbCol by GetNbCols.

	 
2004-07-20  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 0.8.5

	* easdif/sdifmatrixdata.h, easdif/sdifmatrix.cpp
	added support for selection on rows and columns, improved efficiency by
	means of writing and reading (if no selection on row or column)
	complete matrices  

2004-07-13  Axel Roebel  <Axel.Roebel@ircam.fr>
Version 0.8.4
